--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -25,11 +25,11 @@ html {
  * Basic styles for links
  */
 a {
-  color: $brand-color;
+  color: $dark-blue-color;
   text-decoration: none;
 
   @include on-event {
-    color: $text-color;
+    color: $panther-color;
     text-decoration: underline;
   }
 }
