--- a/stylesheets/components/_button.scss
+++ b/stylesheets/components/_button.scss
@@ -1,3 +1,24 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+
+
+.btn--white{
+    text-transform: uppercase;
+    color: white;
+}
+
+.btn--navigate{
+    color: $dark-blue-color;
+    width: 349px;
+    height: 48px;
+    background: #FFFFFF;
+    border: 1px solid #257CBF;
+    box-shadow: 0px 4px 10px rgba(37, 124, 191, 0.21);
+    border-radius: 5px;
+}
+
+.margin--big{
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
