--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -1,3 +1,20 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+footer{
+    width: $viewport;
+    margin: 0 auto;
+    text-align: center;
+
+    li{
+        margin: 20px 0px 20px 0;
+
+        img{
+            margin-right: 10px;
+        }
+    }
+
+    .inline{
+        display: inline;
+    }
+}
