--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -1,3 +1,31 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+
+body{
+    overflow-x: hidden;
+    position: relative;
+}
+
+.background-top{
+    background-image: url('../../assets/imgs/backgrond/background-top.png');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-position-y: top;
+    position: absolute;
+    height:728px ;
+    width: 1100px;
+    right: 0;
+    top: 1px;
+}
+.background-bottom{
+    background-image: url('../../assets/imgs/backgrond/background-below.png');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-position-y: bottom;
+    position: absolute;
+    height:540px ;
+    width: 1205px;
+    left: 0;
+    bottom: 1px;
+}
